[gd_scene load_steps=13 format=2]

[ext_resource path="res://gui_images/buttons/button_setting_hover.png" type="Texture" id=1]
[ext_resource path="res://fonts/raleway_medium_22.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui_images/buttons/button_setting.png" type="Texture" id=3]
[ext_resource path="res://fonts/raleway_medium_28.tres" type="DynamicFont" id=4]
[ext_resource path="res://gui_images/question_box.png" type="Texture" id=5]
[ext_resource path="res://fonts/raleway_medium_18_new.tres" type="DynamicFont" id=6]
[ext_resource path="res://gui/question_ui.gd" type="Script" id=7]
[ext_resource path="res://gui_images/pause_menu.png" type="Texture" id=8]
[ext_resource path="res://fonts/raleway_medium_40.tres" type="DynamicFont" id=9]
[ext_resource path="res://gui_images/buttons/button_tech_hover.png" type="Texture" id=10]
[ext_resource path="res://gui_images/buttons/button_tech.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "HideUI"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("../Grid2x2:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Grid2x2:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Grid2x2:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../Grid2x2:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.745098, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../Grid4x1:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../Grid4x1:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../Grid4x1:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("../Grid4x1:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0.745098, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath(".:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath(".:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath(".:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath(".:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0.745098, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../QuestionBox")
anims/HideUI = SubResource( 1 )

[node name="VisualScore" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.796078 )
margin_left = 9.0
margin_top = 4.0
margin_right = 125.0
margin_bottom = 44.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VisualScore"]
margin_left = 7.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="VisualScore/HBoxContainer"]
margin_top = 3.0
margin_right = 53.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( -751, -122 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Điểm: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="VisualScore/HBoxContainer"]
margin_left = 53.0
margin_top = 1.0
margin_right = 93.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.12549, 0.12549, 0.12549, 1 )
custom_fonts/font = ExtResource( 2 )
text = "200"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionBox" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.15
anchor_right = 0.901
anchor_bottom = 0.27
rect_pivot_offset = Vector2( 66, 225 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionNumber" type="Label" parent="QuestionBox"]
anchor_left = 0.044
anchor_top = 0.128
anchor_right = 0.069
anchor_bottom = 1.0
margin_bottom = -88.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Câu 1:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="QuestionBox"]
visible = false
anchor_top = 0.926
anchor_bottom = 1.0
margin_left = 46.88
margin_top = -66.012
margin_right = 67.88
margin_bottom = -64.0
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionImage" type="TextureRect" parent="QuestionBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 117.0
margin_top = 18.0
margin_right = -52.76
margin_bottom = -18.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.294
margin_left = -60.0
margin_top = 7.0
margin_right = -820.0
margin_bottom = -456.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid2x2" type="GridContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.741
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = -10.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid4x1" type="GridContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/hseparation = 25
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultOverlay" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ResultOverlay"]
modulate = Color( 0, 0, 0, 0.533333 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ResultOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResultOverlay/CenterContainer"]
margin_left = 262.0
margin_top = 100.0
margin_right = 762.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 400 )
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="ResultOverlay/CenterContainer/TextureRect"]
anchor_right = 1.0
margin_top = 35.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.690196, 0.403922, 0.196078, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Kết quả"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ResultOverlay/CenterContainer/TextureRect"]
anchor_left = 0.05
anchor_top = 0.305
anchor_right = 0.95
anchor_bottom = 0.9
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congrat" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer"]
margin_right = 450.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "Chúc mừng! Em làm đúng:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentScore" type="HBoxContainer" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer"]
margin_top = 31.0
margin_right = 450.0
margin_bottom = 65.0
custom_constants/separation = 0
alignment = 1

[node name="Score" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CurrentScore"]
margin_left = 163.0
margin_right = 179.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( -751, -122 )
custom_colors/font_color = Color( 0.937255, 0.870588, 0.564706, 1 )
custom_fonts/font = ExtResource( 4 )
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slash" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CurrentScore"]
margin_left = 179.0
margin_right = 198.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( -751, -122 )
custom_fonts/font = ExtResource( 4 )
text = "/"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalQuestions" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CurrentScore"]
margin_left = 198.0
margin_right = 231.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "69"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionText" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CurrentScore"]
margin_left = 231.0
margin_right = 287.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = " câu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompleteTime" type="HBoxContainer" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer"]
margin_top = 69.0
margin_right = 450.0
margin_bottom = 96.0
custom_constants/separation = 0
alignment = 1

[node name="CompleteTimeText" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CompleteTime"]
margin_left = 48.0
margin_right = 272.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -751, -122 )
custom_fonts/font = ExtResource( 2 )
text = "Thời gian hoàn thành: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CompleteTime"]
margin_left = 272.0
margin_right = 402.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "5 phút 3 giây"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighestScore" type="HBoxContainer" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer"]
margin_top = 100.0
margin_right = 450.0
margin_bottom = 127.0
custom_constants/separation = 0
alignment = 1

[node name="HighestScoreText" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/HighestScore"]
margin_left = 119.0
margin_right = 276.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Điểm cao nhất: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/HighestScore"]
margin_left = 276.0
margin_right = 288.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -751, -122 )
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
custom_fonts/font = ExtResource( 2 )
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalQuestionsText" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/HighestScore"]
margin_left = 288.0
margin_right = 330.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
custom_fonts/font = ExtResource( 2 )
text = " câu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardInfo" type="MarginContainer" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer"]
margin_top = 131.0
margin_right = 450.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 35 )

[node name="Unlocked" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/RewardInfo"]
visible = false
margin_top = 4.0
margin_right = 450.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -751, -122 )
custom_colors/font_color = Color( 1, 0.913725, 0.627451, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Màn chơi tiếp theo đã được mở khoá!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryHarder" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/RewardInfo"]
visible = false
margin_right = 450.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( -751, -122 )
custom_colors/font_color = Color( 0.627451, 0.886275, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Hãy cố gắng hơn nữa nhé!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer"]
margin_top = 170.0
margin_right = 450.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoHomeButton" type="TextureButton" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CenterContainer"]
margin_left = 30.0
margin_right = 420.0
margin_bottom = 80.0
rect_min_size = Vector2( 390, 80 )
size_flags_horizontal = 0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CenterContainer/GoHomeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_bottom = -3.0
custom_colors/font_color = Color( 0.8, 0.929412, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Quay về màn hình chính"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="DisableClick" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="ResultOverlay/CenterContainer/TextureRect/VBoxContainer/CenterContainer/GoHomeButton" to="." method="_on_GoHomeButton_pressed"]
